--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2021"
 
 [dependencies]
 cxx = { version = "1.0", features = ["default", "c++17"] }
-glam = { version = "0.25", features = ["approx", "serde"] }
+glam = { version = "0.28", features = ["approx", "serde"] }
 libc = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1.1"
 
 [build-dependencies]
+cc = { version = "1.0", features = ["parallel"] }
 cxx-build = "1.0"
 vcvars = "0.1.6"
 
