--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 cxx = { version = "1.0", features = ["default", "c++17"] }
-glam = { version = "0.28", features = ["approx", "serde"] }
+glam = { version = "0.27", features = ["approx", "serde"] }
 libc = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1.1"
@@ -20,6 +20,7 @@ default = ["deterministic"]
 deterministic = []
 profile = []
 debug-renderer = []
+debug-print = []
 
 [[bin]]
 name = "testbed"
