--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ glam = { version = "0.27", features = ["approx", "serde"] }
 libc = "0.2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1.1"
+thiserror = "1.0"
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
